gcc/testsuite/rust/rustc/ui/typeck/path-to-method-sugg-unresolved-expr_dg.rs
fn main() {
    let page_size = page_size::get();
// { dg-error ".E0433." "" { target *-*-* } .-1 }
}

